--- a/.gitignore
+++ b/.gitignore
@@ -159,5 +159,6 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
 
- swap files for `nano` and `vim` users
+
+# swap files for `nano` and `vim` users
 **/*.swp
